# edgar-scraper

./: .gitignore  Dockerfile.api  Dockerfile.scraper  Dockerfile.ui  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  report.json
 schema/: ai_document.schema.json
analytics/: stats.py
api/: db.py  main.py  models.py
api/routers/: analytics.py  documents.py  runs.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scraper/: config.py  crawler.py  db.py  main.py  parser.py  transformer.py  writer.py
tests/: conftest.py  test_parser.py  test_transformer.py  test_writer.py
ui/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts
ui/src/components/: FilingBadge.tsx  Layout.tsx  PageHeader.tsx  StatCard.tsx
ui/src/components/charts/: QualityHistogram.tsx  TimelineChart.tsx
ui/src/pages/: Analytics.tsx  DocumentDetail.tsx  Documents.tsx  Export.tsx  Overview.tsx  RunDetail.tsx  Runs.tsx
