[project]
name = "edgar-scraper"
version = "0.1.0"
description = "SEC EDGAR AI scraping pipeline — collects, cleans, and enriches financial filings for AI workflows"
requires-python = ">=3.12"

dependencies = [
    # --- HTTP & Crawling ---
    "httpx>=0.27",              # async HTTP client (scraper + FastAPI test client)
    "beautifulsoup4>=4.12",     # HTML parsing
    "lxml>=5.2",                # fast parser backend for BS4

    # --- Text Processing ---
    "langdetect>=1.0.9",        # language detection heuristic
    "chardet>=5.2",             # encoding detection for older SEC filings

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0", # ORM — async mode
    "asyncpg>=0.29",            # async PostgreSQL driver (used by SQLAlchemy async engine)
    "psycopg[binary]>=3.1",     # sync PostgreSQL driver (used by Alembic only)
    "alembic>=1.13",            # schema migrations

    # --- API ---
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",  # ASGI server
    "pydantic>=2.7",            # request/response validation
    "pydantic-settings>=2.3",   # settings from environment variables

    # --- Utilities ---
    "python-dotenv>=1.0",       # .env loading outside of Docker
    "tenacity>=8.3",            # retry logic with exponential backoff
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",     # async test support
    "pytest-cov>=5.0",          # coverage reports
    "httpx>=0.27",              # FastAPI TestClient
    "ruff>=0.4",                # linter + formatter (replaces black + flake8)
    "mypy>=1.10",               # static type checking
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Tool configuration ---

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]  # pycodestyle, pyflakes, isort, pyupgrade, bugbear, simplify

[tool.pytest.ini_options]
asyncio_mode = "auto"           # all async tests run automatically without @pytest.mark.asyncio
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["scraper", "api"]